manifests/seraphim/prod/seedsync/Namespace-seedsync.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: seedsync
