manifests/seraphim/prod/seedsync/Service-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/instance: oauth2-proxy-seedsync
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: seedsync
    app.kubernetes.io/version: v7.13.0
  name: oauth2-proxy
  namespace: seedsync
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy
