manifests/seraphim/prod/seedsync/Service-seedsync.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: seedsync
    app.kubernetes.io/name: seedsync
    app.kubernetes.io/part-of: seedsync
    app.kubernetes.io/version: 0.8.6
  name: seedsync
  namespace: seedsync
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: seedsync
