manifests/seraphim/prod/seedsync/HTTPRoute-seedsync.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: seedsync
    app.kubernetes.io/name: seedsync
    app.kubernetes.io/part-of: seedsync
    app.kubernetes.io/version: 0.8.6
  name: seedsync
  namespace: seedsync
spec:
  hostnames:
    - seedsync.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
